--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/core-features.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/core-features.html
@@ -1,27 +1,37 @@
 <section class="core-features">
-  <h2 class="core-features__title">{{ .Params.title }}</h2>
-  <p class="core-features__subtitle">{{ .Params.description }}</p>
-  <a class="link link_xl" href="{{ .Params.link.url }}">{{ .Params.link.text }}</a>
-  <div class="card core-features__cloud-native">
-    <div>
-      <h4 class="core-features__card-title">{{ .Params.cloudFeature.title }}</h4>
-      <p class="core-features__card-content">{{ .Params.cloudFeature.content }}</p>
-      <a class="link link_dark link_md" href="{{ .Params.cloudFeature.link.url }}">
-        {{ .Params.cloudFeature.link.text }}
-      </a>
+  <div class="container">
+    <h2 class="core-features__title mx-auto">{{ .Params.title }}</h2>
+    <p class="core-features__subtitle mx-auto">{{ .Params.description }}</p>
+    <div class="text-start text-lg-center">
+      <a class="link link_xl" href="{{ .Params.link.url }}">{{ .Params.link.text }}</a>
     </div>
-    <div class="core-features__cloud-native-image"></div>
-  </div>
-  <div class="core-features__cards">
-    {{ range .Params.featureCards }}
-    <div class="card core-features__card">
-      <div>
-        {{ .icon | safeHTML }}
-        <h6 class="core-features__card-title">{{ .title }}</h6>
-        <p class="core-features__card-content">{{ .content }}</p>
+    <div class="row">
+      <div class="col-12">
+        <div class="card core-features__cloud-native">
+          <div>
+            <h4 class="core-features__card-title">{{ .Params.cloudFeature.title }}</h4>
+            <p class="core-features__card-content">{{ .Params.cloudFeature.content }}</p>
+            <a class="link link_dark link_md" href="{{ .Params.cloudFeature.link.url }}">
+              {{ .Params.cloudFeature.link.text }}
+            </a>
+          </div>
+          <div class="core-features__cloud-native-image"></div>
+        </div>
       </div>
-      <a class="link link_dark link_md align-self-start" href="{{ .link.url }}"> {{ .link.text }} </a>
     </div>
-    {{ end }}
+    <div class="core-features__cards row">
+      {{ range .Params.featureCards }}
+      <div class="col-12 col-xl-4">
+        <div class="card core-features__card">
+          <div>
+            {{ .icon | safeHTML }}
+            <h6 class="core-features__card-title">{{ .title }}</h6>
+            <p class="core-features__card-content">{{ .content }}</p>
+          </div>
+          <a class="link link_dark link_md align-self-start" href="{{ .link.url }}"> {{ .link.text }} </a>
+        </div>
+      </div>
+      {{ end }}
+    </div>
   </div>
 </section>
