--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/vectors.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/vectors.html
@@ -1,17 +1,21 @@
 <section class="vectors">
-  <h2 class="vectors__title">{{ .Params.title }}</h2>
-  <p class="vectors__subtitle">{{ .Params.subtitle }}</p>
-  <div class="vectors__cards">
-    {{ range $index, $element := .Params.featureCards }}
-    <div {{ if mod $index 2 | eq 0 }} class="vectors__card" {{ else }} class="vectors__card--reversed" {{ end }}>
-      {{ .icon | safeHTML }}
-      <div class="vectors__card-description">
-        <h4 class="vectors__card-title">{{ .title }}</h4>
-        <p class="vectors__card-content">{{ .content }}</p>
-        <a class="link link_light link_md" href="{{ .link.url }}"> {{ .link.text }} </a>
+  <div class="container">
+    <h2 class="vectors__title mx-auto">{{ .Params.title }}</h2>
+    <p class="vectors__subtitle mx-auto">{{ .Params.subtitle }}</p>
+    <div class="vectors__cards row">
+      {{ range $index, $element := .Params.featureCards }}
+      <div class="col-12">
+        <div {{ if mod $index 2 | eq 0 }} class="vectors__card" {{ else }} class="vectors__card--reversed" {{ end }}>
+          {{ .icon | safeHTML }}
+          <div class="vectors__card-description">
+            <h4 class="vectors__card-title">{{ .title }}</h4>
+            <p class="vectors__card-content">{{ .content }}</p>
+            <a class="link link_light link_md" href="{{ .link.url }}"> {{ .link.text }} </a>
+          </div>
+          <div class="vectors__card-image" style="background-image: url(/img/vectors/vector-{{$index}}.svg)"></div>
+        </div>
       </div>
-      <div class="vectors__card-image" style="background-image: url(/img/vectors/vector-{{$index}}.svg)"></div>
+      {{ end }}
     </div>
-    {{ end }}
   </div>
 </section>
