--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_docker-deploy.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_docker-deploy.scss
@@ -5,14 +5,21 @@
 
   padding-top: $spacer * 4;
   padding-bottom: $spacer * 4;
-  padding-left: $spacer * 1.5;
-  padding-right: $spacer * 1.5;
+  padding-left: $spacer * 0.5;
+  padding-right: $spacer * 0.5;
 
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-  gap: rem(40);
+  &__content {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    row-gap: rem(40);
+  }
+
+  &__description {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
 
   &__title {
     font-size: rem(32);
@@ -40,11 +47,12 @@
     }
   }
 
-  &__top {
-    max-width: 100%;
+  &__preview {
+    display: flex;
+    justify-content: center;
   }
 
-  &__preview {
+  &__image {
     width: 100%;
     height: rem(229);
     max-width: rem(335);
@@ -58,7 +66,7 @@
     padding-right: rem(50);
   }
 
-  &__preview code {
+  &__image code {
     color: $neutral-98;
     font-size: rem(9);
     line-height: rem(14);
@@ -70,8 +78,8 @@
     padding-bottom: $spacer * 5;
     gap: $spacer * 5;
 
-    &__top {
-      max-width: rem(445);
+    &__description {
+      justify-content: center;
     }
 
     &__title {
@@ -87,6 +95,11 @@
     }
 
     &__preview {
+      display: flex;
+      justify-content: flex-end;
+    }
+
+    &__image {
       width: rem(584);
       height: rem(400);
       max-width: rem(584);
@@ -96,7 +109,7 @@
       padding-right: rem(80);
     }
 
-    &__preview code {
+    &__image code {
       font-size: rem(15);
       line-height: rem(24);
     }
