--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_footer.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_footer.scss
@@ -3,6 +3,8 @@
 .footer {
   padding-top: $spacer * 4;
   padding-bottom: $spacer * 2.5;
+  padding-left: $spacer * 0.5;
+  padding-right: $spacer * 0.5;
   background-color: $neutral-10;
 
   display: flex;
@@ -21,7 +23,6 @@
   &__top-content {
     display: flex;
     width: 100%;
-    padding: 0 rem(20);
     flex-direction: column;
     justify-content: space-between;
     gap: $spacer * 3;
@@ -113,7 +114,6 @@
     flex-direction: column;
     max-width: 100%;
     justify-content: space-between;
-    padding: 0 rem(20);
   }
 
   &__middle-newsletter {
@@ -132,7 +132,7 @@
     background-color: transparent;
     padding-top: calc($spacer / 2);
     padding-bottom: calc($spacer / 2);
-    border: 1px solid $neutral-70;
+    border: 1px solid $neutral-40;
     padding-left: $spacer;
     padding-right: $spacer;
     border-radius: 8px;
@@ -143,7 +143,7 @@
   }
 
   &__middle-subscribe input::placeholder {
-    color: $neutral-98;
+    color: $neutral-70;
   }
 
   &__middle-subscribe a {
@@ -222,7 +222,6 @@
     &__top-content {
       padding: 0;
       flex-direction: row;
-      max-width: rem(1100);
       gap: 0;
     }
 
@@ -230,7 +229,6 @@
       padding: 0;
       flex-direction: row;
       align-items: center;
-      max-width: rem(1100);
     }
 
     &__middle-newsletter {
@@ -253,7 +251,6 @@
     &__bottom-content {
       gap: 0;
       flex-direction: row;
-      max-width: rem(1100);
     }
   }
 }
