--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_hero.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_hero.scss
@@ -6,11 +6,14 @@
   background-position: bottom;
   background-repeat: no-repeat;
   position: relative;
+  padding-left: $spacer * 0.5;
+  padding-right: $spacer * 0.5;
 
   &__content {
     text-align: center;
     max-width: 100%;
     margin: 0 auto;
+    width: 100%;
   }
 
   &__image {
@@ -40,6 +43,7 @@
   &__title {
     color: $neutral-98;
     text-align: center;
+    width: 100%;
     margin-bottom: $spacer;
     font-size: map-get($font-sizes, 4);
     line-height: rem(48);
