--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/additional-resources.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/additional-resources.html
@@ -1,18 +1,24 @@
 <section class="additional-resources">
-  <h2 class="additional-resources__title">{{ .Params.title }}</h2>
-  <div class="additional-resources__cards">
-    {{ range .Params.resourceCards }}
-    <div class="additional-resources__card">
-      <div>
-        {{ .icon | safeHTML }}
-        <h6 class="additional-resources__card-title">{{ .title }}</h6>
-        <p class="additional-resources__card-content">{{ .content }}</p>
+  <div class="additional-resources__wrapper container">
+    <h2 class="additional-resources__title">{{ .Params.title }}</h2>
+    <div class="additional-resources__cards row">
+      {{ range .Params.resourceCards }}
+      <div class="additional-resources__card col-12 col-xl-3">
+        <div class="additional-resources__card-info">
+          <div>
+            {{ .icon | safeHTML }}
+            <h6 class="additional-resources__card-title">{{ .title }}</h6>
+            <p class="additional-resources__card-content">{{ .content }}</p>
+          </div>
+          <a class="additional-resources__card-link" href="{{ .link.url }}">
+            <span>{{ .link.text }}</span>
+            <span>{{ partial "svg" "Arrow-Right-White.svg" }}</span>
+          </a>
+        </div>
       </div>
-      <a class="additional-resources__card-link" href="{{ .link.url }}">
-        <span>{{ .link.text }}</span>
-        <span>{{ partial "svg" "Arrow-Right-White.svg" }}</span>
-      </a>
+      {{ end }}
     </div>
-    {{ end }}
   </div>
+  <div class="additional-resources__overlay-top"></div>
+  <div class="additional-resources__overlay-bottom"></div>
 </section>
