--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -20,6 +20,9 @@
 @import 'partials/additional-resources';
 @import 'partials/menu-mobile';
 @import 'partials/feature-overview';
+@import 'partials/qdrant-vector-database-hero';
+@import 'partials/qdrant-vector-database-use-cases';
+@import 'partials/get-started-small';
 
 .main-header {
   background: $neutral-10;
