--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_additional-resources.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_additional-resources.scss
@@ -1,51 +1,51 @@
 @use '../helpers/functions' as *;
 
 .additional-resources {
+  position: relative;
+  overflow: hidden;
   background-color: $neutral-10;
 
-  padding-top: $spacer * 7.5;
-  padding-left: $spacer * 1.5;
-  padding-right: $spacer * 1.5;
-  padding-bottom: $spacer * 7.5;
+  padding-top: $spacer * 4;
+  padding-bottom: $spacer * 4;
+  padding-left: $spacer * 0.5;
+  padding-right: $spacer * 0.5;
 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  &__wrapper {
+    position: relative;
+    z-index: 1;
+  }
 
   &__title {
-    font-size: map-get($font-sizes, 3);
-    margin-bottom: $spacer * 4;
-    line-height: rem(57);
-    max-width: rem(1110);
+    margin-bottom: $spacer * 3;
+    font-size: $spacer * 2;
+    line-height: rem(38);
     color: $neutral-98;
     width: 100%;
   }
 
   &__cards {
-    display: flex;
-    align-items: center;
-    justify-content: end;
+    justify-content: space-between;
     gap: rem(30);
   }
 
   &__card {
-    background-color: $neutral-20;
-    padding-top: $spacer * 1.5;
-    padding-bottom: $spacer * 1.5;
-    padding-left: $spacer * 1.5;
-    padding-right: $spacer * 1.5;
-    max-width: rem(255);
-    min-height: rem(333);
-    border-radius: calc($spacer / 2);
+    &-info {
+      background: linear-gradient($neutral-20, #0e1424);
+      padding-top: $spacer * 1.5;
+      padding-bottom: $spacer * 1.5;
+      padding-left: $spacer * 1.5;
+      padding-right: $spacer * 1.5;
+      border-radius: calc($spacer / 2);
 
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-between;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: space-between;
 
-    svg {
-      max-width: rem(24);
-      max-height: rem(24);
+      svg {
+        max-width: rem(24);
+        max-height: rem(24);
+      }
     }
   }
 
@@ -69,5 +69,68 @@
     font-weight: 500;
     font-size: map-get($font-sizes-text, 'm');
     text-decoration: none;
+  }
+
+  &__overlay-top {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: rem(323);
+    height: rem(320);
+    background-image: url('/img/blurred/blurred-light-4-mobile.png');
+    background-position: top;
+    background-size: cover;
+  }
+
+  &__overlay-bottom {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: rem(375);
+    height: rem(377);
+    background-image: url('/img/blurred/blurred-light-5-mobile.png');
+    background-position: bottom;
+    background-size: cover;
+  }
+
+  @include media-breakpoint-up(xl) {
+    padding-top: $spacer * 7.5;
+    padding-bottom: $spacer * 7.5;
+
+    &__wrapper {
+      max-width: rem(1134);
+    }
+
+    &__title {
+      font-size: map-get($font-sizes, 3);
+      line-height: rem(57);
+      margin-bottom: $spacer * 4;
+    }
+
+    &__cards {
+      justify-content: space-between;
+      gap: 0;
+      padding: 0 rem(12);
+    }
+
+    &__card {
+      max-width: rem(255);
+      padding: 0;
+
+      &-info {
+        width: 100%;
+        min-height: rem(333);
+      }
+    }
+
+    &__overlay-top {
+      background-image: url('/img/blurred/blurred-light-4.png');
+    }
+
+    &__overlay-bottom {
+      width: rem(637);
+      height: rem(376);
+      background-image: url('/img/blurred/blurred-light-5.png');
+    }
   }
 }
