--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/hero.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/hero.html
@@ -25,17 +25,15 @@
   <div class="hero__image">
     <picture>
       {{ range .Params.heroImageSources }}
-      <source
-        {{
-        if
-        .minWidth
-        }}media="(min-width: {{ .minWidth }})"
-        {{
-        end
-        }}
-        srcset="{{ .srcset }}"
-        type="{{ .type }}"
-      />
+        <source
+          {{ if
+            .minWidth
+          }}
+            media="(min-width: {{ .minWidth }})"
+          {{ end }}
+          srcset="{{ .srcset }}"
+          type="{{ .type }}"
+        />
       {{ end }}
       <img src="{{ .Params.fallbackHeroImage.src }}" alt="{{ .Params.fallbackHeroImage.alt }}" draggable="false" />
     </picture>
