--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/customer-stories.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/customer-stories.html
@@ -3,7 +3,8 @@
     <div class="customer-stories__header">
       <h3 class="customer-stories__title mx-auto">{{ .Params.title }}</h3>
       <div class="customer-stories__header-content">
-        {{ .Scratch.Set "cssClass" "link_xl" }} {{ partial "link" . }}
+        {{ .Scratch.Set "cssClass" "link_xl" }}
+        {{ partial "link" . }}
         <div class="customer-stories__controls">
           <button type="button" disabled class="customer-stories__button customer-stories__button-prev">
             <span>{{ partial "svg" "Angle-Right.svg" }}</span>
@@ -17,21 +18,21 @@
     <div class="customer-stories__cards-wrapper">
       <div class="customer-stories__cards row flex-nowrap">
         {{ range .Params.storyCards }}
-        <div class="col-12 col-xl-4">
-          <div class="card customer-stories__card">
-            <div>
-              <img src="{{.icon}}" alt="{{.brand}}" />
-              <p class="customer-stories__card-content">{{ .content | safeHTML }}</p>
-            </div>
-            <div class="customer-stories__card-footer">
-              <img src="{{.author.avatar}}" alt="{{.author.fullName}}" />
-              <div class="customer-stories__card-author">
-                <p class="customer-stories__card-author-name">{{ .author.fullName }}</p>
-                <p class="customer-stories__card-author-position">{{ .author.position }}</p>
+          <div class="col-12 col-xl-4">
+            <div class="card customer-stories__card">
+              <div>
+                <img src="{{ .icon }}" alt="{{ .brand }}" />
+                <p class="customer-stories__card-content">{{ .content | safeHTML }}</p>
+              </div>
+              <div class="customer-stories__card-footer">
+                <img src="{{ .author.avatar }}" alt="{{ .author.fullName }}" />
+                <div class="customer-stories__card-author">
+                  <p class="customer-stories__card-author-name">{{ .author.fullName }}</p>
+                  <p class="customer-stories__card-author-position">{{ .author.position }}</p>
+                </div>
               </div>
             </div>
           </div>
-        </div>
         {{ end }}
       </div>
     </div>
