--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/link.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/link.html
@@ -1,4 +1,5 @@
-{{ $defaultClass := "link" }} {{ $cssClass := "" }}
+{{ $defaultClass := "link" }}
+{{ $cssClass := "" }}
 {{ if .Scratch.Get "cssClass" }}
   {{ $cssClass = .Scratch.Get
     "cssClass"
