add enterprise solutions page

--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -23,6 +23,12 @@
 @import 'partials/qdrant-vector-database-hero';
 @import 'partials/qdrant-vector-database-use-cases';
 @import 'partials/get-started-small';
+@import 'partials/enterprise-solutions-hero';
+@import 'partials/enterprise-solutions-use-cases';
+@import 'partials/testimonial';
+@import 'partials/get-contacted';
+@import 'partials/enterprise-benefits';
+@import 'partials/top-and-bottom-overlay';
 
 .main-header {
   background: $neutral-10;
