--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/additional-resources.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/additional-resources.html
@@ -19,6 +19,5 @@
       {{ end }}
     </div>
   </div>
-  <div class="additional-resources__overlay-top"></div>
-  <div class="additional-resources__overlay-bottom"></div>
+  {{ partial "top-and-bottom-overlay" (dict "context" . "class" "additional-resources") }}
 </section>
