--- a/qdrant-landing/themes/qdrant-2024/layouts/qdrant-vector-database/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/qdrant-vector-database/baseof.html
@@ -4,28 +4,14 @@
 <main>
   <header class="main-header">
     {{ with (.Site.GetPage "section" "top-banner") }}{{ partial "top-banner" . }}{{ end }}
-    {{ with (.Site.GetPage
-      "menu")
-    }}
-      {{ partial "menu" . }}
-    {{ end }}
-    {{ with (.Site.GetPage "qdrant-vector-database-hero") }}
-      {{ partial
-        "qdrant-vector-database-hero" .
-      }}
-    {{ end }}
+    {{ with (.Site.GetPage "menu") }}{{ partial "menu" . }}{{ end }}
+    {{ with (.Site.GetPage "qdrant-vector-database-hero") }}{{ partial "qdrant-vector-database-hero" . }}{{ end }}
   </header>
 </main>
 
 {{ with (.Site.GetPage "qdrant-vector-database-use-cases") }}{{ partial "qdrant-vector-database-use-cases" . }}{{ end }}
 {{ with (.Site.GetPage "feature-overview") }}{{ partial "feature-overview" . }}{{ end }}
-{{ with (.Site.GetPage
-  "get-started-small")
-}}
-  {{ partial "get-started-small" . }}
-{{ end }}
-{{ with (.Site.GetPage "additional-resources") }}
-  {{ partial "additional-resources" . }}
-{{ end }}
+{{ with (.Site.GetPage "get-started-small") }}{{ partial "get-started-small" . }}{{ end }}
+{{ with (.Site.GetPage "additional-resources") }}{{ partial "additional-resources" . }}{{ end }}
 {{ with (.Site.GetPage "get-started") }}{{ partial "get-started" . }}{{ end }}
 {{ with (.Site.GetPage "footer") }}{{ partial "footer" . }}{{ end }}
