--- a/qdrant-landing/themes/qdrant-2024/layouts/qdrant-vector-database/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/qdrant-vector-database/baseof.html
@@ -9,6 +9,7 @@
     }}
       {{ partial "menu" . }}
     {{ end }}
+    {{ with (.Site.GetPage "menu-mobile") }}{{ partial "menu-mobile" . }}{{ end }}
     {{ with (.Site.GetPage "qdrant-vector-database-hero") }}
       {{ partial
         "qdrant-vector-database-hero" .
