--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/vectors.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/vectors.html
@@ -1,7 +1,21 @@
-<section class="vectors">
+{{ $defaultClass := "vectors" }}
+{{ $cssClass := "" }}
+{{ if .Scratch.Get "cssClass" }}
+  {{ $cssClass = .Scratch.Get
+    "cssClass"
+  }}
+{{ end }}
+
+
+<section class="{{ printf "%s %s" $defaultClass $cssClass }}">
+  <div class="vectors__header-overlay"></div>
   <div class="container">
-    <h2 class="vectors__title mx-auto">{{ .Params.title }}</h2>
-    <p class="vectors__subtitle mx-auto">{{ .Params.subtitle }}</p>
+    <div class="vectors__header row">
+      <div class="col-12 z-1">
+        <h2 class="vectors__title mx-auto">{{ .Params.title }}</h2>
+        <p class="vectors__subtitle mx-auto">{{ .Params.subtitle }}</p>
+      </div>
+    </div>
     <div class="vectors__cards row">
       {{ range $index, $element := .Params.featureCards }}
         <div class="col-12">
