--- a/qdrant-landing/themes/qdrant-2024/layouts/qdrant-vector-database/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/qdrant-vector-database/baseof.html
@@ -4,8 +4,17 @@
 <main>
   <header class="main-header">
     {{ with (.Site.GetPage "section" "top-banner") }}{{ partial "top-banner" . }}{{ end }}
-    {{ with (.Site.GetPage "menu") }}{{ partial "menu" . }}{{ end }}
-    {{ with (.Site.GetPage "qdrant-vector-database-hero") }}{{ partial "qdrant-vector-database-hero" . }}{{ end }}
+    {{ with (.Site.GetPage
+      "menu")
+    }}
+      {{ partial "menu" . }}
+    {{ end }}
+    {{ with (.Site.GetPage "menu-mobile") }}{{ partial "menu-mobile" . }}{{ end }}
+    {{ with (.Site.GetPage "qdrant-vector-database-hero") }}
+      {{ partial
+        "qdrant-vector-database-hero" .
+      }}
+    {{ end }}
   </header>
 </main>
 
