--- a/qdrant-landing/themes/qdrant-2024/layouts/use-cases/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/use-cases/baseof.html
@@ -4,10 +4,17 @@
 <main>
   <header class="main-header">
     {{ with (.Site.GetPage "section" "top-banner") }}{{ partial "top-banner" . }}{{ end }}
-    {{ with (.Site.GetPage "menu") }}{{ partial "menu" . }}{{ end }}
+    {{ with (.Site.GetPage
+      "menu")
+    }}
+      {{ partial "menu" . }}
+    {{ end }}
+    {{ with (.Site.GetPage "menu-mobile") }}{{ partial "menu-mobile" . }}{{ end }}
   </header>
 </main>
 
-{{ with (.Site.GetPage "vectors") }}{{ partial "vectors" . }}{{ end }}
+{{ with (.Site.GetPage "vectors-use-case") }}
+  {{ .Scratch.Set "cssClass" "vectors-use-case" }}{{ partial "vectors" . }}
+{{ end }}
 {{ with (.Site.GetPage "get-started") }}{{ partial "get-started" . }}{{ end }}
 {{ with (.Site.GetPage "footer") }}{{ partial "footer" . }}{{ end }}
