--- a/qdrant-landing/themes/qdrant-2024/layouts/enterprise-solutions/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/enterprise-solutions/baseof.html
@@ -3,7 +3,7 @@
 
 <main>
   <header class="main-header">
-    {{ with (.Site.GetPage "section" "top-banner") }}{{ partial "top-banner" . }}{{ end }}
+    {{ partial "top-banner" . }}
     {{ with (.Site.GetPage "menu") }}{{ partial "menu" . }}{{ end }}
     {{ with (.Site.GetPage "enterprise-solutions-hero") }}{{ partial "enterprise-solutions-hero" . }}{{ end }}
   </header>
