--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/top-banner.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/top-banner.html
@@ -1,7 +1,9 @@
-<section class="top-banner">
-  <div>
-    <span class="top-banner__icon"> {{ .Params.icon | safeHTML }} </span>
-    <span class="top-banner__text"> {{ .Params.text }} </span>
-    <a class="link link_light link_sm" href="{{ .Params.link.url }}">{{ .Params.link.text }}</a>
-  </div>
-</section>
+{{ with (.Site.GetPage "section" "top-banner") }}
+  <section class="top-banner">
+    <div>
+      <span class="top-banner__icon"> {{ .Params.icon | safeHTML }} </span>
+      <span class="top-banner__text"> {{ .Params.text }} </span>
+      <a class="link link_light link_sm" href="{{ .Params.link.url }}">{{ .Params.link.text }}</a>
+    </div>
+  </section>
+{{ end }}
