refactor menu content source

--- a/qdrant-landing/themes/qdrant-2024/layouts/enterprise-solutions/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/enterprise-solutions/baseof.html
@@ -4,7 +4,7 @@
 <main>
   <header class="main-header">
     {{ partial "top-banner" . }}
-    {{ with (.Site.GetPage "menu") }}{{ partial "menu" . }}{{ end }}
+    {{ partial "menu" . }}
     {{ with (.Site.GetPage "enterprise-solutions-hero") }}{{ partial "enterprise-solutions-hero" . }}{{ end }}
   </header>
 </main>
