refactor menu-mobile content source

--- a/qdrant-landing/themes/qdrant-2024/layouts/enterprise-solutions/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/enterprise-solutions/baseof.html
@@ -5,6 +5,7 @@
   <header class="main-header">
     {{ partial "top-banner" . }}
     {{ partial "menu" . }}
+    {{ partial "menu-mobile" . }}
     {{ with (.Site.GetPage "enterprise-solutions-hero") }}{{ partial "enterprise-solutions-hero" . }}{{ end }}
   </header>
 </main>
