--- a/qdrant-landing/themes/qdrant-2024/layouts/index.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/index.html
@@ -9,7 +9,7 @@
         {{ partial "top-banner" . }}
 
         {{ partial "menu" . }}
-        {{ with (.Site.GetPage "menu-mobile") }}{{ partial "menu-mobile" . }}{{ end }}
+        {{ partial "menu-mobile" . }}
         {{ with (.Site.GetPage "hero") }}{{ partial "hero" . }}{{ end }}
         {{ with (.Site.GetPage
           "customers")
