--- a/qdrant-landing/themes/qdrant-2024/layouts/use-cases/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/use-cases/baseof.html
@@ -5,7 +5,7 @@
   <header class="main-header">
     {{ partial "top-banner" . }}
     {{ partial "menu" . }}
-    {{ with (.Site.GetPage "menu-mobile") }}{{ partial "menu-mobile" . }}{{ end }}
+    {{ partial "menu-mobile" . }}
   </header>
 </main>
 
