refactor hero content source

--- a/qdrant-landing/themes/qdrant-2024/layouts/enterprise-solutions/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/enterprise-solutions/baseof.html
@@ -6,7 +6,7 @@
     {{ partial "top-banner" . }}
     {{ partial "menu" . }}
     {{ partial "menu-mobile" . }}
-    {{ with (.Site.GetPage "enterprise-solutions-hero") }}{{ partial "enterprise-solutions-hero" . }}{{ end }}
+    {{ partial "enterprise-solutions-hero" . }}
   </header>
 </main>
 
