--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/hero.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/hero.html
@@ -1,3 +1,4 @@
+{{ with (.Site.GetPage "hero") }}
 <section class="hero">
   <div class="container">
     <div class="row">
@@ -39,3 +40,4 @@
     </picture>
   </div>
 </section>
+{{ end }}
