--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-vector-database-hero.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-vector-database-hero.html
@@ -1,3 +1,4 @@
+{{ with (.Site.GetPage "qdrant-vector-database-hero") }}
 <section class="qdrant-vector-database-hero">
   <div class="qdrant-vector-database-hero__wrapper container">
     <div class="row">
@@ -22,3 +23,4 @@
     </div>
   </div>
 </section>
+{{ end }}
