--- a/qdrant-landing/themes/qdrant-2024/layouts/qdrant-vector-database/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/qdrant-vector-database/baseof.html
@@ -6,10 +6,7 @@
     {{ partial "top-banner" . }}
     {{ partial "menu" . }}
     {{ partial "menu-mobile" . }}
-    {{ with (.Site.GetPage "qdrant-vector-database-hero") }}
-      {{ partial
-        "qdrant-vector-database-hero" .
-      }}
+    {{ partial "qdrant-vector-database-hero" . }}
     {{ end }}
   </header>
 </main>
